--- a/E03_Juan_Ignacio_Flores.ipynb
+++ b/E03_Juan_Ignacio_Flores.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN8amCwHLWY2P46dpqWkF7f",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,10 +60,37 @@
       "cell_type": "code",
       "source": [
         "import plotly.graph_objs as go\n",
-        "from plotly.offline import iplot\n"
+        "from plotly.offline import iplot"
       ],
       "metadata": {
         "id": "rgiocRVYOjgB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Listas** de Datos de ejemplo para el gráfico y definición de valores\n",
+        "para las coordenadas."
+      ],
+      "metadata": {
+        "id": "2bpmtUgGRxoQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coordenadas_x = [0, 1, 2, 3, 4]\n",
+        "coordenadas_y = [0, 1, 2, 3, 4]\n",
+        "concentraciones = [[10, 10.625, 12.5, 15.625, 20],\n",
+        " [5.625, 6.25, 8.125, 11.25, 15.625],\n",
+        " [2.5, 3.125, 5.0, 8.125, 12.5],\n",
+        " [0.625, 1.25, 3.125, 6.25, 10.625],\n",
+        " [0, 0.625, 2.5, 5.625, 10]]"
+      ],
+      "metadata": {
+        "id": "a7yiTOIpR4J-"
       },
       "execution_count": null,
       "outputs": []
