--- a/E03_Juan_Ignacio_Flores.ipynb
+++ b/E03_Juan_Ignacio_Flores.ipynb
@@ -94,6 +94,37 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Configuración del Gráfico:** \\\n",
+        "Esta Sección configura los parámetros para indicarle al\n",
+        "**Framework**, *Dash* cómo crear el gráfico de contorno con la\n",
+        "*Objeto* **iplot**."
+      ],
+      "metadata": {
+        "id": "qX_Tgq5MTqrP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data = [go.Contour(\n",
+        " x=coordenadas_x,\n",
+        " y=coordenadas_y,\n",
+        " z=concentraciones,\n",
+        " colorscale='Viridis'\n",
+        ")]\n",
+        "# Crear la figura y mostrar el gráfico\n",
+        "fig = go.Figure(data=data)\n",
+        "iplot(fig)"
+      ],
+      "metadata": {
+        "id": "gnTZKzvVTvFt"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
