--- a/Machine_Learning.ipynb
+++ b/Machine_Learning.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP1Dx1ZYG1wUKAkw5orKwpc",
+      "authorship_tag": "ABX9TyP4OxvLbwoD1Pd1Wyl/BWDl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,6 +27,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. Importación de librerías y carga del dataset:\n",
+        "Comenzaremos importando las librerías necesarias y cargando el dataset de Kaggle. En este caso, utilizaremos el conjunto de datos \"Iris\" que contiene información sobre las características de flores de diferentes especies."
+      ],
+      "metadata": {
+        "id": "-KnmwYNCTZr5"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 1,
       "metadata": {
@@ -37,21 +47,21 @@
         "import pandas as pd\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.neighbors import KNeighborsClassifier\n",
-        "from sklearn.metrics import accuracy_score"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "from sklearn.metrics import accuracy_score\n",
         "# Carga del dataset Iris de Kaggle\n",
         "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/iris/iris.data\"\n",
         "df = pd.read_csv(url, names=['sepal_length', 'sepal_width', 'petal_length', 'petal_width', 'species'])"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Preparación de los datos:\n",
+        "El dataset debe estar preparado para el entrenamiento del modelo. Esto implica separar las características (atributos) de las etiquetas (clases) y dividir el conjunto de datos en entrenamiento y prueba."
       ],
       "metadata": {
-        "id": "RNF165eJSIew"
-      },
-      "execution_count": 2,
-      "outputs": []
+        "id": "_062NG2dTlYQ"
+      }
     },
     {
       "cell_type": "code",
@@ -67,6 +77,16 @@
       },
       "execution_count": 3,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "3. Entrenamiento del modelo:\n",
+        "Seleccionamos un algoritmo de Machine Learning, en este caso utilizaremos K-Nearest Neighbors (KNN). Creamos una instancia del algoritmo y lo entrenamos con el conjunto de datos de entrenamiento."
+      ],
+      "metadata": {
+        "id": "AWjkYWShTqfg"
+      }
     },
     {
       "cell_type": "code",
@@ -100,6 +120,16 @@
           "execution_count": 4
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Evaluación del modelo:\n",
+        "Utilizamos el conjunto de datos de prueba para evaluar el rendimiento del modelo entrenado. Calculamos la precisión, que indica el porcentaje de predicciones correctas."
+      ],
+      "metadata": {
+        "id": "6pMQSioiTuMo"
+      }
     },
     {
       "cell_type": "code",
